--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"format": "turbo lint"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "1.7.3",
 		"turbo": "1.13.3",
 		"typescript": "5.4.5"
 	},
