--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,23 +1,25 @@
 {
-	"name": "web",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"lint": "biome lint src",
-		"format": "biome format src",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"react": "18.2.0",
-		"react-dom": "18.2.0"
-	},
-	"devDependencies": {
-		"@types/react": "18.3.1",
-		"@types/react-dom": "18.3.0",
-		"@vitejs/plugin-react": "4.2.1",
-		"vite": "5.2.11"
-	}
+  "name": "web",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "biome lint src",
+    "format": "biome format src",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "@ntt-data/ui": "*"
+  },
+  "devDependencies": {
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react": "4.2.1",
+    "sass": "1.77.0",
+    "vite": "5.2.11"
+  }
 }
