feat: add react router

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,9 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ntt-data/ui": "*",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@ntt-data/ui": "*"
+    "react-router-dom": "6.23.0"
   },
   "devDependencies": {
     "@types/react": "18.3.1",
