--- a/biome.json
+++ b/biome.json
@@ -5,6 +5,7 @@
   },
   "javascript": {
     "formatter": {
+      "quoteStyle": "single",
       "trailingComma": "none",
       "semicolons": "asNeeded"
     }
