--- a/apps/backend/biome.json
+++ b/apps/backend/biome.json
@@ -14,16 +14,20 @@
     }
   },
   "formatter": {
-    "indentStyle": "space",
     "enabled": true,
+    "indentStyle": "space",
     "lineWidth": 120
   },
   "linter": {
     "enabled": true,
     "rules": {
       "recommended": true,
+      "style": {
+        "useImportType": "off"
+      },
       "suspicious": {
-        "noExplicitAny": "warn"
+        "noExplicitAny": "warn",
+        "noConsoleLog": "warn"
       }
     }
   }
