--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,9 @@
 {
 	"$schema": "https://turbo.build/schema.json",
 	"pipeline": {
+		"prebuild": {
+			"dependsOn": ["dist/**"]
+		},
 		"build": {
 			"dependsOn": ["^build"],
 			"outputs": ["dist/**"]
