--- a/package.json
+++ b/package.json
@@ -22,5 +22,5 @@
     "typescript": "5.4.5"
   },
   "packageManager": "yarn@1.22.22",
-  "workspaces": ["core/*", "packages/*", "apps/**/*"]
+  "workspaces": ["packages/*", "apps/**/*"]
 }
