--- a/apps/backend/movie-api/package.json
+++ b/apps/backend/movie-api/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@ntt-data/typescript-config": "*",
+    "@ntt-data/core": "*",
     "@api/shared": "*",
     "@nestjs/common": "10.0.0",
     "@nestjs/core": "10.0.0",
