--- a/apps/backend/movie-api/package.json
+++ b/apps/backend/movie-api/package.json
@@ -11,7 +11,7 @@
     "format": "biome format src",
     "start": "nest start",
     "dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "dev:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -20,12 +20,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@ntt-data/typescript-config": "*",
-    "@ntt-data/core": "*",
     "@api/shared": "*",
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "10.0.0",
     "@nestjs/platform-express": "10.0.0",
+    "@ntt-data/core": "*",
+    "@ntt-data/typescript-config": "*",
+    "axios": "^1.6.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "reflect-metadata": "0.2.0",
