--- a/turbo.json
+++ b/turbo.json
@@ -11,7 +11,8 @@
 		"lint": {},
 		"dev": {
 			"cache": false,
-			"persistent": true
+			"persistent": true,
+			"dependsOn": ["^build"]
 		}
 	}
 }
