chore: Add load test script for movie-api

--- a/apps/backend/movie-api/package.json
+++ b/apps/backend/movie-api/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "load:test": "artillery run --output ./request/artillery/movie-api.json ./request/artillery/movie-api.yaml"
   },
   "dependencies": {
     "@api/shared": "*",
