--- a/turbo.json
+++ b/turbo.json
@@ -9,6 +9,9 @@
 			"outputs": ["dist/**"]
 		},
 		"lint": {},
+		"test": {
+			"dependsOn": ["^build"]
+		},
 		"dev": {
 			"cache": false,
 			"persistent": true,
