--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: 
         yarn install --production=true --pure-lockfile
-        yarn add turbo@1.13.3 typescript@5.4.5 jest@29.5.0 ts-jest@29.1.0"
+        yarn add turbo@1.13.3 typescript@5.4.5 jest@29.5.0 ts-jest@29.1.0
 
     - name: Build
       run: yarn build
