--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,7 +19,7 @@ jobs:
         node-version: '21'
 
     - name: Install dependencies
-      run: 
+      run: |
         yarn install --production=true --pure-lockfile
         yarn add turbo@1.13.3 typescript@5.4.5 jest@29.5.0 ts-jest@29.1.0
 
