--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,9 +19,8 @@ jobs:
         node-version: '21'
 
     - name: Install dependencies
-      run: 
-        yarn install --production=true --pure-lockfile
-        yarn add turbo@1.13.3 typescript@5.4.5 jest@29.5.0 ts-jest@29.1.0"
+      run: |
+        yarn install --production=false
 
     - name: Build
       run: yarn build
