--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,8 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ntt-data/typescript-config": "*",
-    "@ntt-data/ui": "*",
+    "@ntt-data/typescript-config": "1.0.0",
+    "@ntt-data/ui": "1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.23.0"
