--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,7 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@ntt-data/typescript-config": "*"
+    "@ntt-data/typescript-config": "1.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
