chore: Remove deprecated @ntt-data/typescript-config package and update dependencies

--- a/apps/backend/shared/package.json
+++ b/apps/backend/shared/package.json
@@ -11,9 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@nestjs/common": "10.0.0",
-    "@ntt-data/shared": "1.0.0",
-    "@ntt-data/typescript-config": "1.0.0"
+    "@nestjs/common": "10.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
