--- a/apps/backend/shared/tsconfig.json
+++ b/apps/backend/shared/tsconfig.json
@@ -1,11 +1,30 @@
 {
-  "extends": "@ntt-data/typescript-config/shared.json",
+  "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "sourceMap": true,
     "target": "ES2021",
     "outDir": "./dist",
     "declarationDir": "./dist",
     "baseUrl": "./src",
-    "module": "commonjs"
-  }
+    "module": "commonjs",
+    "experimentalDecorators": true,
+    "allowJs": true,
+    "declaration": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "allowSyntheticDefaultImports": true,
+    "incremental": true,
+    "skipLibCheck": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false,
+    "sourceMap": true,
+    "composite": false,
+    "declarationMap": true,
+    "esModuleInterop": true,
+    "inlineSources": false,
+    "preserveWatchOutput": true
+  },
+  "exclude": ["node_modules"]
 }
