--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,22 @@
 {
-  "extends": "@ntt-data/typescript-config/ui.json",
-  "include": ["."],
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "display": "Default",
+  "compilerOptions": {
+    "composite": false,
+    "declaration": true,
+    "declarationMap": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "inlineSources": false,
+    "preserveWatchOutput": true,
+    "strictNullChecks": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "jsx": "react-jsx",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "declarationDir": "./dist",
+    "baseUrl": "./src"
+  },
+  "include": ["components"],
   "exclude": ["node_modules"]
 }
