chore: adjust build

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,11 +1,30 @@
 {
-  "extends": "@ntt-data/typescript-config/shared.json",
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "display": "Default",
   "compilerOptions": {
     "sourceMap": true,
     "target": "ES2021",
     "outDir": "./dist",
-    "declarationDir": "./dist",
     "baseUrl": "./src",
-    "module": "commonjs"
-  }
+    "module": "commonjs",
+
+    "declarationDir": "./dist",
+    "declaration": true,
+    "declarationMap": true,
+    
+    "allowJs": true,
+    "experimentalDecorators": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "allowSyntheticDefaultImports": true,
+    
+    "incremental": true,
+    "skipLibCheck": true,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "noFallthroughCasesInSwitch": false
+    
+
+  },
+  "exclude": ["node_modules"]
 }
