--- a/apps/backend/shared/package.json
+++ b/apps/backend/shared/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc -p tsconfig.build.json",
+    "build": "tsc",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch"
   },
