--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc -p tsconfig.build.json",
+    "build": "tsc",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch"
   },
@@ -28,6 +28,9 @@
     "testEnvironment": "node"
   },
   "devDependencies": {
-    "rimraf": "5.0.6"
+    "@types/jest": "29.5.2",
+    "jest": "29.5.0",
+    "rimraf": "5.0.6",
+    "ts-jest": "29.1.0"
   }
 }
