--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -2,23 +2,23 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "display": "Default",
   "compilerOptions": {
-    "sourceMap": true,
     "outDir": "./dist",
-    "declarationDir": "./dist",
-    "baseUrl": "./src",
     "composite": false,
-    "incremental": true,
-    "skipLibCheck": true,
     "declaration": true,
     "declarationMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "inlineSources": false,
+    "isolatedModules": true,
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "preserveWatchOutput": true,
-    "strictNullChecks": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "skipLibCheck": true,
+    "strict": true,
     "jsx": "react-jsx"
   },
-  "include": ["components"],
+  "include": ["."],
   "exclude": ["node_modules"]
 }
