--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "test": "turbo test",
-    "web:preview": "yarn workspaces run preview",
+    "web:preview": "yarn workspace web run preview",
     "web:dev": "yarn workspace web run dev",
     "movie-api:dev": "yarn workspace @api/movie run dev",
     "movie-api:test": "yarn workspace @api/movie run test",
