--- a/apps/frontend/web/package.json
+++ b/apps/frontend/web/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "@ntt-data/core": "1.0.0",
     "@ntt-data/ui": "1.0.0",
-    "@web/shared": "1.0.0",
     "@reduxjs/toolkit": "2.2.4",
+    "@svgr/plugin-svgo": "^8.1.0",
+    "@web/shared": "1.0.0",
     "axios": "1.6.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -26,6 +27,7 @@
     "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react": "4.2.1",
     "sass": "1.77.0",
-    "vite": "5.2.11"
+    "vite": "5.2.11",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
