--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.7.3",
-    "turbo": "1.13.3",
+    "commitizen": "^4.3.0",
     "ts-node": "10.9.1",
+    "turbo": "1.13.3",
     "typescript": "5.4.5"
   },
   "packageManager": "yarn@1.22.22",
-  "workspaces": ["packages/*", "apps/**/*"]
+  "workspaces": [
+    "packages/*",
+    "apps/**/*"
+  ]
 }
