--- a/apps/backend/movie-api/package.json
+++ b/apps/backend/movie-api/package.json
@@ -29,7 +29,7 @@
     "@nestjs/core": "10.0.0",
     "@nestjs/platform-express": "10.0.0",
     "@ntt-data/core": "1.0.0",
-    "axios": "^1.6.8",
+    "axios": "1.6.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "reflect-metadata": "0.2.0",
@@ -60,7 +60,7 @@
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
-      ".+\\.(t|j)s$": "ts-jest"
+      ".+\\.ts$": "ts-jest"
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
