--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,9 @@
   },
   "overrides": [
     {
-      "include": ["apps/backend/**"],
+      "include": [
+        "apps/backend/**"
+      ],
       "linter": {
         "enabled": false,
         "rules": {
