--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "test": "turbo test",
-    "web:preview": "yarn workspace web run preview",
-    "web:dev": "yarn workspace web run dev",
+    "web:preview": "yarn workspace @web/movie run preview",
+    "web:dev": "yarn workspace @web/movie run dev",
     "movie-api:prod": "yarn workspace @api/movie run prod",
     "movie-api:dev": "yarn workspace @api/movie run dev",
     "movie-api:test": "yarn workspace @api/movie run test",
@@ -20,7 +20,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.7.3",
-    "commitizen": "^4.3.0",
+    "commitizen": "4.3.0",
+    "cz-conventional-changelog": "3.3.0",
     "ts-node": "10.9.1",
     "turbo": "1.13.3",
     "typescript": "5.4.5"
@@ -29,5 +30,10 @@
   "workspaces": [
     "packages/*",
     "apps/**/*"
-  ]
+  ],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
