--- a/apps/frontend/web/package.json
+++ b/apps/frontend/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "@web/movie",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -11,11 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ntt-data/ui": "1.0.0",
     "@ntt-data/core": "1.0.0",
-    "@reduxjs/toolkit": "^2.2.4",
+    "@ntt-data/ui": "1.0.0",
+    "@web/shared": "1.0.0",
+    "@reduxjs/toolkit": "2.2.4",
+    "axios": "1.6.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "9.1.2",
     "react-router-dom": "6.23.0"
   },
   "devDependencies": {
